+Calc-n (Fix): overflowed close park and copy down btns hover

--- a/css/style.css
+++ b/css/style.css
@@ -832,6 +832,10 @@ div.calc>div>table.matrix>tbody>tr>td:not(.btns):hover,
     padding: 2px 6px 2px 6px;
     font-weight: bold;
 }
+.copyDownLeft:hover:after {
+    right: 0%;
+    left: 100%;
+}
 .closePark:hover:after{
     content: "Свернуть парк";
     position: absolute;
@@ -847,6 +851,10 @@ div.calc>div>table.matrix>tbody>tr>td:not(.btns):hover,
     border-radius: 15px;
     padding: 2px 6px 2px 6px;
     font-weight: bold;
+}
+.closeParkLeft:hover:after{
+    right: 0%;
+    left: 100%;
 }
 .arrow_down:hover:after{
     content: "Развернуть мульти узел";
